# libpurist

./: .gitignore  .gitmodules  CMakeLists.txt  Card.cpp  Card.h  Display.cpp  Display.h  Displays.cpp  Displays.h  DumbBuffer.cpp  DumbBuffer.h  DumbBufferMapping.cpp  DumbBufferMapping.h  DumbBufferTargetSurface.cpp  DumbBufferTargetSurface.h  EGLTargetSurface.cpp  EGLTargetSurface.h  Entry.cpp  Entry.h  FrameBuffer.cpp  FrameBuffer.h  ModeConnector.cpp  ModeConnector.h  ModeCrtc.cpp  ModeCrtc.h  ModeEncoder.cpp  ModeEncoder.h  ModeResources.cpp  ModeResources.h  README.md  TargetSurface.h  build.sh  drm-gbm-mod.c  globals.cmake  interfaces.h  lsan-suppressions.supp  main.cpp  modeset.cpp  modeset.h
examples/blinking_screen/: CMakeLists.txt  blinking_screen.cpp
examples/color_rectangle_skia/: CMakeLists.txt  color_rectangle_skia.cpp
examples/term_skia/: CMakeLists.txt  SkiaTermEmulator.cpp  SkiaTermEmulator.h  SkiaTermRenderer.cpp  SkiaTermRenderer.h  TermSubprocess.cpp  TermSubprocess.h  TextCellsMatrixModel.h  VTermWrapper.cpp  VTermWrapper.h  cells.h  format_table.py  litera_key.h  lru_cache.h  process_tools.cpp  process_tools.h  row_key.h  term_skia.cpp
examples/term_skia/app_examples/: CMakeLists.txt  apc_test.cpp
examples/text_input_skia/: CMakeLists.txt  TextInput.cpp  TextInput.h  text_input_skia.cpp
include/purist/graphics/: interfaces.h
include/purist/graphics/skia/: SkiaEGLOverlay.h
include/purist/platform/: Platform.h  exceptions.h  interfaces.h
libpurist_graphics/: CMakeLists.txt
libpurist_graphics/include/purist/: Platform.h  exceptions.h
libpurist_graphics/include/purist/graphics/: Display.h  DisplayContentsHandler.h  FrameBuffer.h  GPUProvider.h  Mode.h  TargetSurface.h  interfaces.h
libpurist_graphics/include/purist/input/: KeyboardHandler.h  interfaces.h
libpurist_graphics/src/purist/: Platform.cpp  global_init.cpp
libpurist_graphics/src/purist/graphics/: Card.cpp  Card.h  DisplayImpl.cpp  DisplayImpl.h  Displays.cpp  Displays.h  DumbBufferTargetSurfaceImpl.h  EGLTargetSurfaceImpl.cpp  FrameBufferImpl.cpp  FrameBufferImpl.h  ModeConnector.cpp  ModeConnector.h  ModeCrtc.cpp  ModeCrtc.h  ModeEncoder.h  ModeModeInfo.cpp  ModeModeInfo.h  ModeResources.cpp  ModeResources.h  TargetSurfaceBackface.h
libpurist_graphics/src/purist/input/: Keyboard.cpp  Keyboard.h  Keyboards.cpp  Keyboards.h
libpurist_graphics_skia/: CMakeLists.txt
libpurist_graphics_skia/include/purist/graphics/skia/: DisplayContentsSkia.h  DisplayContentsSkiaFactory.h  SkiaEGLOverlay.h  SkiaOverlay.h  TextInput.h  icu_common.h
libpurist_graphics_skia/src/purist/graphics/skia/: DisplayContentsSkia.cpp  DisplayContentsSkiaFactory.cpp  SkiaEGLOverlay.cpp  SkiaEGLOverlay.h  SkiaOverlay.cpp  SkiaRasterOverlay.cpp  SkiaRasterOverlay.h  TextInput.cpp
libpurist_input/: CMakeLists.txt
libpurist_input/include/purist/input/: KeyboardHandler.h  KeyboardsProvider.h
libpurist_input/src/purist/input/: Keyboard.cpp  Keyboard.h  Keyboards.cpp  Keyboards.h
libpurist_platform/: CMakeLists.txt
libpurist_platform/include/purist/: Platform.h
libpurist_platform/src/purist/: Platform.cpp  global_init.h
src/purist/graphics/: Card.cpp  Card.h  DisplayImpl.h  Displays.h  DumbBufferMapping.cpp  DumbBufferMapping.h  DumbBufferTargetSurfaceImpl.cpp  EGLTargetSurfaceImpl.h  FrameBufferImpl.h  ModeConnector.h  ModeCrtc.cpp  ModeCrtc.h  ModeEncoder.cpp  TargetSurfaceBackface.h
src/purist/graphics/skia/: SkiaEGLOverlay.cpp
src/purist/platform/: Card.cpp  Card.h  Display.cpp  Display.h  DisplayImpl.cpp  DisplayImpl.h  Displays.cpp  Displays.h  DumbBufferMapping.cpp  DumbBufferMapping.h  DumbBufferTargetSurface.cpp  DumbBufferTargetSurface.h  DumbBufferTargetSurfaceImpl.cpp  DumbBufferTargetSurfaceImpl.h  EGLTargetSurface.cpp  EGLTargetSurface.h  EGLTargetSurfaceImpl.cpp  EGLTargetSurfaceImpl.h  FrameBuffer.cpp  FrameBuffer.h  FrameBufferImpl.cpp  FrameBufferImpl.h  ModeConnector.cpp  ModeConnector.h  ModeCrtc.cpp  ModeCrtc.h  ModeEncoder.cpp  ModeEncoder.h  ModeResources.cpp  ModeResources.h  Platform.cpp  TargetSurface.h  TargetSurfaceBackface.h
